--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ a {
     color: #363636;
 }
 
-.container-header .section {
+.container-header .section, .container-footer .section {
     background: #daf1fd;
     text-align: center;
 }
@@ -234,6 +234,11 @@ input.textfield.years {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.section-footer {
+    flex: 1 1 100%;
+    padding: 10px;
+}
+
 .container-button-box {
     margin-top: 20px;
 }
@@ -287,7 +292,7 @@ input.btn {
 }
 
 .doc {
-    margin:20px 0 20px 0;
+    margin:10px 0;
     border-radius: 5px;
     letter-spacing:-0.01em;
     color: #363636;
